--- a/nbproject/private/configs/JADE.properties
+++ b/nbproject/private/configs/JADE.properties
@@ -1,1 +1,1 @@
-application.args=-gui
+application.args=-gui AgentPenerima:Modul9_1811081007.Receiver_1811081007;AgentPengirim:Modul9_1811081007.Sender_1811081007
