--- a/nbproject/private/configs/JADE.properties
+++ b/nbproject/private/configs/JADE.properties
@@ -1,1 +1,1 @@
-application.args=-gui AgentPenerima:Modul9_1811081007.Receiver_1811081007;AgentPengirim:Modul9_1811081007.Sender_1811081007
+application.args=-gui Ngirim:Modul9_1811081007.Kirim_1811081007;Broker:Modul9_1811081007.Broker_1811081007;Budi:Modul9_1811081007.Terima_1811081007;Joko:Modul9_1811081007.Terima_1811081007;MIG:Modul9_1811081007.Terima_1811081007;
